Integrate SLF4J logging and SonarLint for code quality analysis